# ComfyUI-Svg2Gcode

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  vpype_extended_node.py
ComfyUI_VPype_Node/: __init__.py  requirements.txt
examples/: workflow.json
